feat: ace editor

--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
                 </details>
             </div>
             <div id="code">
-                <textarea id="manualfile" style="display:none; min-height: 450px;"></textarea>
+                <div id="manualfile"></div>
+                <!-- <textarea style="display:none; min-height: 450px;"></textarea> -->
             </div>
         </div> 
         <div id="panel-three" class="split">
@@ -427,6 +428,9 @@
     <link href="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/styles/vs.min.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/split.js/1.6.2/split.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/vue-i18n/8.24.3/vue-i18n.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/ace/test/ace.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/ace/test/mode-latex.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/ace/test/theme-textmate.min.js"></script>
     <script src="js/style.js"></script>
     <script src="lang/cn.js"></script>
     <script src="lang/en.js"></script>
