--- a/index.html
+++ b/index.html
@@ -166,7 +166,6 @@
             </div>
             <div id="code">
                 <div id="manualfile"></div>
-                <!-- <textarea style="display:none; min-height: 450px;"></textarea> -->
             </div>
         </div> 
         <div id="panel-three" class="split">
@@ -431,6 +430,10 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/ace/test/ace.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/ace/test/mode-latex.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/ace/test/theme-textmate.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/ace/test/ext-language_tools.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/ace/test/mode-snippets.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/ace/test/snippets/latex.min.js"></script>
+    <script src="js/completion.js"></script>
     <script src="js/style.js"></script>
     <script src="lang/cn.js"></script>
     <script src="lang/en.js"></script>
