fix: translation on func2tex

--- a/res/function/func2tex.html
+++ b/res/function/func2tex.html
@@ -29,7 +29,8 @@
 
     </div>
     <div id="alert">
-        请不要省略 * 进行乘法运算。
+        请不要省略 * 进行乘法运算。<br>
+        Use * to perform multiplication.
     </div>
 </body>
 <script>
