feat: add beamer option

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                         {{$t('Settings')}}
                     </summary>
                     <div class="libchecker"><input type="checkbox" onclick="chnClick(this)" checked="true">{{$t('settings.CJK')}}</input></div>
+                    <div class="libchecker"><input type="checkbox" onclick="beamerClick(this)">{{$t('settings.Beamer')}}</input></div>
                     <div class="libchecker"><input type="checkbox" onclick="pinClick(this)" v-model="enablepin">{{$t('settings.Pin')}}</input></div>
                     <div class="libchecker"><input type="checkbox" onclick="tdClick(this)" v-model="td">{{$t('settings.3D')}}</input></div>
                     <div class="libchecker"><input type="checkbox" onclick="legendClick(this)" v-model="enableLegend">{{$t('settings.Legend')}}</input></div>
