update title and year

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PGFPlots 统计绘图编辑器</title>
+    <title>PGFPlotsEdt</title>
     <link rel="icon" href="favicon.ico" sizes="64x64">
     <link rel="stylesheet" href="lib/normalize.min.css">
     <link rel="stylesheet" href="main.css">
