--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <summary>
                         {{$t('Settings')}}
                     </summary>
-                    <div class="libchecker"><input type="checkbox" onclick="chnClick(this)" checked="true">{{$t('settings.CJK')}}</input></div>
+                    <div class="libchecker"><input type="checkbox" onclick="chnClick(this)" id="chnCheckbox">{{$t('settings.CJK')}}</input></div>
                     <div class="libchecker"><input type="checkbox" onclick="beamerClick(this)">{{$t('settings.Beamer')}}</input></div>
                     <div class="libchecker"><input type="checkbox" onclick="pinClick(this)" v-model="enablepin">{{$t('settings.Pin')}}</input></div>
                     <div class="libchecker"><input type="checkbox" onclick="tdClick(this)" v-model="td">{{$t('settings.3D')}}</input></div>
