--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <div id="app">
         <div class="nav" @mouseenter="animbck" @mouseleave="animfwd">
             <div id="extlinks">
-                <select v-model="lang">
-                    <option value="en">English</option>
-                    <option value="cn">简体中文</option>
-                </select>
+                <div id="langbox">
+                    🌐 <select v-model="lang">
+                        <option value="en">English</option>
+                        <option value="cn">简体中文</option>
+                    </select>
+                </div>
                 <div id="poweredby" class="accordion">
                     <a class="acckey" href="https://logcreative.github.io/LaTeXSparkle/src/art/chapter06.html" target="_blank"><img class="icon">🔖</img><div class="value">{{ $t('nav.quickstart') }}</div></a>
                     <!-- darkmode -->
