--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div id="langbox">
                     🌐 <select v-model="lang">
                         <option value="en">English</option>
-                        <option value="cn">简体中文</option>
+                        <option value="chs">简体中文</option>
                     </select>
                 </div>
                 <div id="poweredby" class="accordion">
@@ -445,7 +445,7 @@
     <!-- User defined -->
     <script src="js/completion.js"></script>
     <script src="js/style.js"></script>
-    <script src="lang/cn.js"></script>
+    <script src="lang/chs.js"></script>
     <script src="lang/en.js"></script>
     <script src="js/tpl.js"></script>
     <script src="main.js"></script>
