--- a/index.html
+++ b/index.html
@@ -456,7 +456,12 @@
                 sizes:[30,35,35],
                 minSize: [300,300,0],
                 direction: 'horizontal',
+                onDrag: setSpliterHeight,
             });
+            document.querySelectorAll('.container details').forEach(element => {
+                element.addEventListener("toggle", setSpliterHeight);
+            });
+            document.querySelector('#data').addEventListener('mouseleave', setSpliterHeight);
             document.getElementById('codedetail').open = true;
             setSpliterHeight();
         }
